Add test run instructions and sample output